# The-Brownfield-Cartographer

./: .gitignore  README.md  RECONNAISSANCE.md  dvc.yaml  format.ps1  pyproject.toml
.cartography/: .gitignore  CODEBASE.md  cartography_trace.jsonl  day_one_answers.json  day_one_qna.json  doc_drift_flags.json  domain_map.json  knowledge_graph.json  last_commit.txt  lineage_graph.json  module_graph.json  onboarding_brief.md  purpose_statements.json
.github/workflows/: CI.yml  copilot-instructions.md
src/: __init__.py  cli.py  orchestrator.py
src/agents/: __init__.py  archivist.py  hydrologist.py  navigator.py  semanticist.py  surveyor.py
src/analysers/: dag_config_analyser.py  dag_config_parser.py  python_dataflow_analyser.py  sql_lineage.py  tree_sitter_analyser.py
src/graph/: knowledge_graph.py
src/models/: models.py
tests/: __init__.py
