# pyproject.toml

[project]
name = "the-brownfield-cartographer"
version = "0.1.0"
description = "Codebase intelligence maping systems" 
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.1.7",
    "black>=25.12.0",
    "chromadb>=1.5.5",
    "click>=8.3.1",
    "dbt-core>=1.11.7",
    "dvc>=3.67.0",
    "faiss-cpu>=1.13.2",
    "flake8>=7.3.0",
    "gitpython>=3.1.46",
    "graphviz>=0.21",
    "isort>=8.0.1",
    "jedi>=0.19.2",
    "langgraph>=1.1.0",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "networkx>=3.6.1",
    "ollama>=0.6.1",
    "pandas>=3.0.1",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "pyspark>=4.1.1",
    "pytest>=9.0.2",
    "pyvis>=0.3.2",
    "pyyaml>=6.0.3",
    "radon>=6.0.1",
    "rope>=1.14.0",
    "ruamel-yaml>=0.19.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "sqlalchemy>=2.0.48",
    "sqlglot>=29.0.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-languages>=1.10.2",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-sql>=0.3.11",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-yaml>=0.7.2",
    "typer>=0.24.1",
    "weaviate-client>=4.20.4",
]


[tool.black]
line-length = 88
target-version = ["py312"]
skip-string-normalization = false

[tool.isort]
profile = "black"
skip = [".venv"]

[tool.flake8]
max-line-length = 88
ignore = ["E203", "W503", "E402"]
exclude = [".venv", "venv", "env"]

[tool.yamllint]
extends = "default"

[tool.yamllint.rules.truthy]
level = "warning"
allowed-values = ["true", "false"]


[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "pytest",
]
